test/spec/if-end-label-superfluous.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/if-end-label-superfluous.fail.wast
(;; STDERR ;;;
Error running "wast2wasm":
out/third_party/testsuite/if-end-label-superfluous.fail.wast:1:22: unexpected label "$l"
(module (func if end $l))
                     ^^
;;; STDERR ;;)
